<resources>
    <string name="app_name">开心音乐</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="global_search">搜索</string>
    <string name="global_search_hint">搜索音乐</string>
    <string name="title_activity_test">TestActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string-array name="main_titles">
        <item>音乐</item>
        <item>玩Android</item>
<!--        <item>视频</item>-->
    </string-array>
    <string name="local_music">本地音乐</string>

    <!--global-->
    <string name="global_confirm">确定</string>


    <string name="default_theme">默认</string>
    <string name="classics_red">经典红</string>
    <string name="cool_black">炫酷黑</string>
    <string name="custom_color">自选颜色</string>
    <string name="night_mode">夜间模式</string>
    <string name="custom_skin">自定义皮肤</string>
    <string name="notification_channel">当前播放</string>
    <string name="notification_channel_description">显示当前在播放音乐</string>

    <string name="word">词</string>

    <string name="is_playing">正在播放</string>
    <string name="duration_unknown">--:--</string>
    <string name="duration_format">%d:%02d</string>

    <string name="play_mode_shuffle_play">随机播放</string>
    <string name="play_mode_list_circulation">列表循环</string>
    <string name="play_mode_single_cycle">单曲循环</string>

    <!-- MainActivity -->
    <string name="main_activity_drawer_night_theme">夜间模式</string>
    <string name="main_activity_drawer_light_theme">日间模式</string>
    <string name="main_activity_drawer_setting">设置</string>
    <string name="main_activity_drawer_exit">退出</string>
    <string name="drawer_my_message">我的消息</string>
    <string name="drawer_my_friends">我的好友</string>
    <string name="drawer_my_person_homepage">个人主页</string>
    <string name="drawer_my_theme">个性装扮</string>

    <!--  PlayerActivity -->
    <string name="artist_track_number">%d首</string>
    <string name="play_all">播放全部</string>
    <string name="total_count">(共%1$d首)</string>
    <string name="multiple_choice">多选</string>
    <string name="player_activity_dynamic_effect">当前动效</string>

    <!--  EqualizerActivity -->
    <string name="equalizer_activity_title">均衡器</string>
    <string name="equalizer_activity_custom">自定义</string>
    <string name="equalizer_activity_advanced_setup">高级设置</string>
    <string name="equalizer_activity_high_db">+12db</string>
    <string name="equalizer_activity_middle_db">0db</string>
    <string name="equalizer_activity_low_db">-12db</string>
    <string name="equalizer_activity_custom_define">自定义</string>
    <string name="equalizer_activity_system_preset">系统预设</string>
    <string name="equalizer_activity_rename_hint">请输入自定义预设名称</string>
    <string name="equalizer_activity_rename_error">该名称已存在</string>
    <string name="equalizer_activity_preset_activity_title">预设</string>

    <!--  EqualizerSavePresetActivity -->
    <string name="equalizer_save_preset_save_to">保存到</string>
    <string name="equalizer_save_preset_new">新增预设</string>
    <string name="equalizer_save_preset_save_title">保存当前音效设置为</string>
    <string name="equalizer_save_preset_name_exit">该名称已存在</string>


    <!--  global -->
    <string name="global_save">保存</string>
    <string name="none">无</string>
    <string name="rename">重命名</string>
    <string name="delete">删除</string>

    <!--ThemeDetailActivity-->
    <string name="theme_detail_activity_title">个性换肤</string>
    <string name="theme_detail_activity_recommend">推荐</string>
    <string name="theme_detail_activity_internal_default">默认</string>
    <string name="theme_detail_activity_internal_red">经典红</string>
    <string name="theme_detail_activity_internal_black">炫酷黑</string>
    <string name="theme_detail_activity_internal_custom_color">自选色</string>
    <string name="theme_detail_activity_internal_custom_bg">自定义</string>

    <!--ThemeColorDetailActivity-->
    <string name="theme_color_detail_activity_title">自选色</string>
</resources>
