<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.theme.themedetail.ThemeDetailActivity"
    android:orientation="vertical">
    <com.ruichaoqun.luckymusic.theme.ui.CustomThemeTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_detail_activity_recommend"
        android:textSize="@dimen/textsize_16sp"
        android:textStyle="bold"
        android:textColor="@color/color_cc000000"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:weightSum="5"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <RelativeLayout
            android:id="@+id/click_theme_default"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/iv_theme_default"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"/>
            <ImageView
                android:id="@+id/iv_use_theme_default"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignBottom="@+id/iv_theme_default"
                android:layout_alignEnd="@+id/iv_theme_default" />
            <com.ruichaoqun.luckymusic.theme.ui.CustomThemeTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_12sp"
                android:layout_marginTop="3dp"
                android:text="@string/theme_detail_activity_internal_default"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/color_cc000000"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/click_theme_red"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/iv_theme_red"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"/>
            <ImageView
                android:id="@+id/iv_use_theme_red"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignBottom="@+id/iv_theme_red"
                android:layout_alignEnd="@+id/iv_theme_red"/>
            <com.ruichaoqun.luckymusic.theme.ui.CustomThemeTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_12sp"
                android:layout_marginTop="3dp"
                android:text="@string/theme_detail_activity_internal_red"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/color_cc000000"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/click_theme_black"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/iv_theme_black"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"/>
            <ImageView
                android:id="@+id/iv_use_theme_black"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignBottom="@+id/iv_theme_black"
                android:layout_alignEnd="@+id/iv_theme_black"/>
            <com.ruichaoqun.luckymusic.theme.ui.CustomThemeTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_12sp"
                android:layout_marginTop="3dp"
                android:text="@string/theme_detail_activity_internal_black"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/color_cc000000"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/click_theme_custom_color"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/iv_theme_custom_color"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"/>
            <ImageView
                android:id="@+id/iv_use_theme_custom_color"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignBottom="@+id/iv_theme_custom_color"
                android:layout_alignEnd="@+id/iv_theme_custom_color"/>
            <com.ruichaoqun.luckymusic.theme.ui.CustomThemeTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_12sp"
                android:layout_marginTop="3dp"
                android:text="@string/theme_detail_activity_internal_custom_color"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/color_cc000000"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/click_theme_custom_bg"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/iv_theme_custom_bg"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"/>
            <ImageView
                android:id="@+id/iv_use_theme_custom_bg"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignBottom="@+id/iv_theme_custom_bg"
                android:layout_alignEnd="@+id/iv_theme_custom_bg"/>
            <com.ruichaoqun.luckymusic.theme.ui.CustomThemeTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_12sp"
                android:layout_marginTop="3dp"
                android:text="@string/theme_detail_activity_internal_custom_bg"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/color_cc000000"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>